--- a/index.html
+++ b/index.html
@@ -33,6 +33,55 @@
   </div>
 </div>
 
+<img class="ui centered image" src="logo.png" href="https://islandsnow.com/">
+
+
+<div class="ui borderless middlemenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+        <div class="item">LONG SLEEVE SHIRTS</div>
+        <div class="item">SWEATSHIRTS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+        <div class="item">LONG SLEEVE SHIRTS</div>
+        <div class="item">SWEATSHIRTS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">KIDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">SHIRTS</div>
+        <div class="item">ONESIES</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">ALHA SURF PROJECT</div>
+        <div class="item">DA MOKES</div>
+        <div class="item">FARMERS MARKET HAWAII</div>
+        <div class="item">HAWAII DOMESTIC MARKET</div>
+      </div>
+    </div>
+
+    <img class="ui fluid image" src="https://cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?15691486226381689305">
+
 <script>
   $('.ui.dropdown')
       .dropdown({on:'hover'})
