--- a/index.html
+++ b/index.html
@@ -33,6 +33,100 @@
   </div>
 </div>
 
+<img class="ui centered image" src="logo.png" href="https://islandsnow.com/">
+
+
+<div class="ui borderless middlemenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+        <div class="item">LONG SLEEVE SHIRTS</div>
+        <div class="item">SWEATSHIRTS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+        <div class="item">LONG SLEEVE SHIRTS</div>
+        <div class="item">SWEATSHIRTS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">KIDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">SHIRTS</div>
+        <div class="item">ONESIES</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">ALHA SURF PROJECT</div>
+        <div class="item">DA MOKES</div>
+        <div class="item">FARMERS MARKET HAWAII</div>
+        <div class="item">HAWAII DOMESTIC MARKET</div>
+      </div>
+    </div>
+
+    <a class="item">Search</a>
+  </div>
+</div>
+
+<img class="ui fluid image" src="https://cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?15691486226381689305">
+
+
+<div class="footer-background">
+  <div class="ui container colorblocktop">
+    <div class="ui three column grid container">
+      <div class="column">
+        NAVIGATION
+        <hr/>
+        <div class="ui list">
+          <div class="item">About Us</div>
+          <div class="item">Videos</div>
+          <div class="item">Store Locations</div>
+        </div>
+      </div>
+
+      <div class="column">
+        MAIN MENU
+        <hr/>
+        <div class="ui list">
+          <div class="item">Men</div>
+          <div class="item">Women</div>
+          <div class="item">Kids</div>
+        </div>
+      </div>
+
+      <div class="column">
+        CONNECT
+        <hr/>
+        <div class="ui list">
+          <div class="item">Sign up for the latest updates</div>
+          <div class="ui right labeled input">
+            <input type="text" placeholder="Enter Email Address">
+            <div class="ui black label">
+              Join
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
   $('.ui.dropdown')
       .dropdown({on:'hover'})
